<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_sceen_activity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stark.headlines.HomeScreen">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                android:fillViewport="true"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/slider_headlines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_collapseMode="pin"/>



            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_home_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/headlines_button"
                    android:background="?selectableItemBackground"
                    android:gravity="end|top"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccentDark"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/home_screen_headlines_button"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favourite_feeds"
                    android:text="@string/feed_category_favourites" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_fav_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_feeds"
                    android:text="@string/feed_category_all"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_all_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/general_feeds"
                    android:text="@string/feed_category_general"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_general_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/business_feeds"
                    android:text="@string/feed_category_business"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_business_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entertainment_feeds"
                    android:text="@string/feed_category_entertainment"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_entertainment_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sport_feeds"
                    android:text="@string/feed_category_sports"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_sport_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/technology_feeds"
                    android:text="@string/feed_category_technology"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_technology_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/science_and_nature_feeds"
                    android:text="@string/feed_category_science_and_nature"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_science_and_nature_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/music_feeds"
                    android:text="@string/feed_category_music"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_music_feeds"/>

                <TextView
                    style="@style/home_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gaming_feeds"
                    android:text="@string/feed_category_gaming"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pager_gaming_feeds"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>


</android.support.design.widget.CoordinatorLayout>
