<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_news_feed_detail_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rajat.stark.headlines.OtherHeadlinesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:id="@+id/newsfeed_logo"
                android:layout_width="match_parent"
                android:transitionName="@string/news_feed_logo_transition"
                android:layout_height="@dimen/newsfeed_image_height"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:contentDescription="@string/newsfeed_logo"
                android:minHeight="@dimen/collapse_min_height"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/newsfeed_image_height"
                android:background="@drawable/other_feed_image_protection"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_collapseMode="pin"/>



        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/newsfeed_article_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/protection_recycler_view_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_to_newsfeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launch_black_24dp"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:elevation="@dimen/fab_elevation"
        android:contentDescription="@string/action_go_to_homepage"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</android.support.design.widget.CoordinatorLayout>
